@@ -51,6 +51,7 @@
 	+ Added auto-suggest for possible slave subnets;
 	+ SSL option for MySQL connections;
 	+ Enum custom field support;
+	+ Added password reset script;
 
 	Security Fixes:
 	----------------------------
